--- a/src/proxy/proxy_docker_compose.yml
+++ b/src/proxy/proxy_docker_compose.yml
@@ -41,12 +41,12 @@ services:
       - "traefik.http.routers.traefik.tls.domains[0].main=*.${YOUR_DOMAIN}"
       - "traefik.http.routers.traefik.tls.domains[0].sans=${YOUR_DOMAIN}"
       ## TRAEFIC DASHBOARD 
-      - "traefik.http.routers.traefik_dashboard.rule=Host(`proxy.${YOUR_DOMAIN}`)"
-      - "traefik.http.routers.traefik_dashboard.entrypoints=websecure"
-      - "traefik.http.routers.traefik_dashboard.tls.certresolver=proxyresolver"
-      - "traefik.http.services.traefik_dashboard.loadbalancer.server.port=8080"
-      - "traefik.http.middlewares.traefik_dashboard_auth.basicauth.usersfile=/etc/traefik/conf/htpasswd"
-      - "traefik.http.routers.traefik_dashboard.middlewares=traefik_dashboard_auth@docker"
+      - "traefik.http.routers.traefik-dashboard.rule=Host(`proxy.${YOUR_DOMAIN}`)"
+      - "traefik.http.routers.traefik-dashboard.entrypoints=websecure"
+      - "traefik.http.routers.traefik-dashboard.tls.certresolver=proxyresolver"
+      - "traefik.http.services.traefik-dashboard.loadbalancer.server.port=8080"
+      - "traefik.http.middlewares.traefik-dashboard-auth.basicauth.usersfile=/etc/traefik/conf/htpasswd"
+      - "traefik.http.routers.traefik-dashboard.middlewares=traefik-dashboard-auth@docker"
 
 
 networks:
