--- a/src/project/project-docker-compose.yml
+++ b/src/project/project-docker-compose.yml
@@ -24,7 +24,7 @@ services:
     container_name: project-cache
     hostname: project-cache
     restart: unless-stopped
-    command: ["redis-server", "--requirepass", "${TAIGA_REDIS_PASSWORD}"]
+    command: redis-server --requirepass ${TAIGA_REDIS_PASSWORD}
     networks:
       - project-network
 
