Added explicit image docker versions in docker-compose scripts (#8)
* added explicit image versions to docker-compose scripts.

* updated vault container version; cosmetic changes

* taiga setup corrections

* correct project setup yml

* make container directories naming more explicit

* Update project_docker_compose.yml

* Update project_docker_compose.yml

Co-authored-by: Bahram Aliyev <aliyev2b@gmail.com>

--- a/src/packages/packages_docker_compose.yml
+++ b/src/packages/packages_docker_compose.yml
@@ -21,7 +21,7 @@ services:
         - packages-network
 
     packages:
-      image: inedo/proget:latest
+      image: inedo/proget:5.2.29
       container_name: packages
       hostname: packages
       restart: always
