--- a/src/ci/ci_docker_compose.yml
+++ b/src/ci/ci_docker_compose.yml
@@ -20,7 +20,7 @@ services:
         - ci-db-data:/var/lib/postgresql/data
 
     ci:
-      image: drone/drone
+      image: drone/drone:1.7
       container_name: ci
       hostname: ci
       restart: always
@@ -58,7 +58,7 @@ services:
         - "traefik.http.services.ci.loadbalancer.server.port=80"
 
     ci-secret-plugin:
-      image: drone/vault
+      image: drone/vault:1.1
       container_name: ci-secret-plugin
       hostname: ci-secret-plugin
       restart: always
@@ -77,7 +77,7 @@ services:
         - ci
 
     ci-agent:
-      image: drone/agent
+      image: drone/agent:1.6
       container_name: ci-agent
       hostname: ci-agent
       restart: always
