--- a/src/ci/ci-docker-compose.yml
+++ b/src/ci/ci-docker-compose.yml
@@ -13,7 +13,7 @@ services:
         - POSTGRES_USER=${DRONE_POSTGRESQL_USER}
         - POSTGRES_PASSWORD=${DRONE_POSTGRESQL_PASSWORD}
       ports:
-        - ${DRONE_POSTGRESQL_PORT}:5432
+        - ${DRONE_POSTGRESQL_PORT_BINDING}:5432
       networks:
         - ci-network
       volumes:
@@ -39,7 +39,7 @@ services:
         - DRONE_AGENTS_ENABLED=true
         - DRONE_RPC_SECRET=${DRONE_RPC_SECRET}
       ports:
-        - ${DRONE_HTTP_PORT}:80
+        - ${DRONE_HTTP_PORT_BINDING}:80
       networks:
         - ci-network
         - proxy-network
@@ -72,7 +72,7 @@ services:
       networks:
         - ci-network
       ports:
-        - ${DRONE_VAULT_PLUGIN_PORT}:3000
+        - ${DRONE_VAULT_PLUGIN_PORT_BINDING}:3000
       depends_on:
         - ci
 
