--- a/src/project/project-docker-compose.yml
+++ b/src/project/project-docker-compose.yml
@@ -10,7 +10,7 @@ services:
     networks:
       - project-network
     ports:
-    - ${TAIGA_POSTGRESQL_PORT}:5432
+    - ${TAIGA_POSTGRESQL_PORT_BINDING}:5432
     volumes:
       - project-posgresql-db:/var/lib/postgresql/data
     environment:
@@ -118,7 +118,7 @@ services:
       - project-network
       - proxy-network
     ports:
-      - ${TAIGA_PROXY_PORT}:80
+      - ${TAIGA_PROXY_PORT_BINDING}:80
     volumes:
       - project-proxy-conf:/taiga-conf
     environment:
