--- a/src/registry/registry-docker-compose.yml
+++ b/src/registry/registry-docker-compose.yml
@@ -9,7 +9,7 @@ services:
     hostname: registry
     restart: always
     ports:
-      - ${REGISTRY_PORT}:5000
+      - ${REGISTRY_PORT_BINDING}:5000
     volumes:
       - registry-data:/var/lib/registry
       - registry-config:/etc/docker/registry
@@ -30,7 +30,7 @@ services:
     container_name: registry-ui
     restart: always
     ports:
-      -  ${REGISTRY_UI_PORT}:80
+      -  ${REGISTRY_UI_PORT_BINDING}:80
     environment:
       - REGISTRY_URL=http://registry:5000
       - PULL_URL=$PULL_URL
