--- a/src/ci/ci.build.sample/Dockerfile
+++ b/src/ci/ci.build.sample/Dockerfile
@@ -30,7 +30,7 @@ RUN dotnet test ./tests/**/*.fsproj --no-build --no-restore --verbosity normal -
 RUN dotnet publish ./src/ci.build.sample/ci.build.sample.fsproj --no-build --no-restore --verbosity normal --configuration Release --output /build/release
 
 # containerize
-FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-alpine AS runtim
+FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-alpine AS runtime
 WORKDIR /app
 COPY --from=build /build/release ./
 ENTRYPOINT ["dotnet", "ci.build.sample.dll"]
