--- a/src/project/project-docker-compose.yml
+++ b/src/project/project-docker-compose.yml
@@ -58,7 +58,7 @@ services:
       - RABBIT_VHOST=project
 
   project-backend:
-    image: dockertaiga/back
+    image: dockertaiga/back:5.0.12
     container_name: project-backend
     hostname: project-backend
     restart: unless-stopped
@@ -91,7 +91,7 @@ services:
       - STARTUP_TIMEOUT=${TAIGA_STARTUP_TIMEOUT}
 
   project-frontend:
-    image: dockertaiga/front
+    image: dockertaiga/front:5.0.12
     container_name: project-frontend
     hostname: project-frontend
     restart: unless-stopped
